refactor: update exception handling in CreateRepairOrderUseCaseTest and CreateWorkshopServiceUseCaseTest